Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
Take a look at screenshots
Attachments
Issue Links
- is blocked by
-
CORE-18063 The clocks tooltip and the clocks context menu fight against each other
-
- Open
-
-
CORE-16397 Regression: Right-click menu does no longer open on the taskbar clock after implementing date tooltip for it
-
- Resolved
-
- relates to
-
CORE-12987 Taskbar Clock does not respond immediately to 'time' (and 'date') changes
-
- Untriaged
-