[EXPLORER] Add date tooltip to taskbar clock

CORE-11444